Implemented the adding to the shops list in UpdateShopperShift function
