# backend/src/main/java/cs/superleague/payment/responses/GetCustomersActiveOrdersResponse.java
@@ -6,6 +6,15 @@ public class GetCustomersActiveOrdersResponse {
 
     private UUID orderID;
     private boolean hasActiveOrder;
+    private String message;
+
+    public String getMessage() {
+        return message;
+    }
+
+    public void setMessage(String message) {
+        this.message = message;
+    }
 
     public UUID getOrderID() {
         return orderID;
@@ -23,8 +32,9 @@ public class GetCustomersActiveOrdersResponse {
         this.hasActiveOrder = hasActiveOrder;
     }
 
-    public GetCustomersActiveOrdersResponse(UUID orderID, boolean hasActiveOrder) {
+    public GetCustomersActiveOrdersResponse(UUID orderID, boolean hasActiveOrder, String message) {
         this.orderID = orderID;
         this.hasActiveOrder = hasActiveOrder;
+        this.message = message;
     }
 }
